layout spacing fixes

--- a/src/scss/modules/_linked-events.scss
+++ b/src/scss/modules/_linked-events.scss
@@ -25,6 +25,7 @@
 
             &:focus, &:hover{
                 outline: 0px;
+                text-decoration:  underline;
                 &:after{
                     outline: 2px solid var(--color-black);
                 }
